--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -69,7 +69,7 @@ jobs:
   review-fail:
     runs-on: ubuntu-latest
     needs: test
-    if: success()
+    if: failure()
     steps:
     - name: if fail test 
       uses: wow-actions/auto-comment@v1
