--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -257,7 +257,7 @@ jobs:
             🎉 @{{ author }} 님. 축하 합니다! 
             
             문제 `${{ needs.extract-num.outputs.num }}` 테스트를 통과하셨습니다!
-            soluton 브랜치에 Merge 해주세요!
+            `solutons` 브랜치에 Merge 해주세요!
 
             도움이 필요한 사람들이 있으면 도와주세요! 소통하면서 더 성장 할 수 있는 좋은 기회입니다!
             [문제 ${{needs.extract-num.outputs.num}} - 도움주러 가기](${{github.server_url}}/${{github.repository}}/pulls?q=is%3Apr+label%3A"도움이+필요해요%21"+label%3A문제${{needs.extract-num.outputs.num}})
@@ -266,7 +266,7 @@ jobs:
             🎉 @{{ author }} 님. 축하 합니다! 
             
             문제 `${{ needs.extract-num.outputs.num }}` 테스트를 통과하셨습니다!
-            soluton 브랜치에 Merge 해주세요!
+            `solutons` 브랜치에 Merge 해주세요!
 
             도움이 필요한 사람들이 있으면 도와주세요! 소통하면서 더 성장 할 수 있는 좋은 기회입니다!
             [문제 ${{needs.extract-num.outputs.num}} - 도움주러 가기](${{github.server_url}}/${{github.repository}}/pulls?q=is%3Apr+label%3A"도움이+필요해요%21"+label%3A문제${{needs.extract-num.outputs.num}})
