--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -30,7 +30,8 @@ jobs:
     - name: Read solution number from Branch
       id: extract
       run: |
-        echo "num=$(python ./script/get_number.py ${{ github.head_ref }})" >> $GITHUB_OUTPUT
+        cd ./script
+        echo "num=$(python get_number.py ${{ github.head_ref }})" >> $GITHUB_OUTPUT
     - name: Print solution number
       run: echo ${{ steps.extract.outputs.num }}
   
@@ -50,7 +51,7 @@ jobs:
         id: extract-json
         run: |
           cd ./script
-          echo "info=$(python read_json.py ${{ needs.extract-num.outputs.num }})" >> $GITHUB_OUTPUT
+          echo "info=$(python read_json.py ./json/solutions.json ${{ needs.extract-num.outputs.num }})" >> $GITHUB_OUTPUT
       - name: Print solution info
         run: echo "${{ steps.extract-json.outputs.info }}"
         
@@ -115,7 +116,7 @@ jobs:
     if: always()
     steps:
     - name: Create and Add Label
-      uses: actions/github-script@v7
+      uses: actions/github-script@v5
       with:
         script: |
           const labelName = '문제${{ needs.extract-num.outputs.num }}';
@@ -152,7 +153,7 @@ jobs:
     if: failure()
     steps:
     - name: Remove Success Label if exists
-      uses: actions/github-script@v7
+      uses: actions/github-script@v5
       with:
         script: |
           const issue = await github.rest.issues.get({
@@ -171,7 +172,7 @@ jobs:
             });
           }
     - name: Add Fail Label
-      uses: actions/github-script@v7
+      uses: actions/github-script@v5
       with:
         script: |
           // fail 라벨 추가
@@ -202,6 +203,36 @@ jobs:
 
            너무 어려우시면 같은 문제를 다른 사람들은 어떻게 풀고있는지 참고도 해보세요!
            [문제 ${{needs.extract-num.outputs.num}} - 보러가기](${{github.server_url}}/${{github.repository}}/pulls?q=is%3Apr+label%3A문제${{needs.extract-num.outputs.num}}) 
+    
+    # 문제 읽어서 comment
+    - name: Checkout repository
+      uses: actions/checkout@v4
+    - name: Read solution path
+      id: path
+      run: |
+        cd ./script
+        echo "path=$(python read_json.py ./json/path.json ${{ needs.extract-num.outputs.num }})" >> $GITHUB_OUTPUT      
+    - name: Read package.json
+      id: package
+      uses: juliangruber/read-file-action@v1
+      with:
+        path: ./src/${{github.actor}}/${{steps.path.outputs.path}}/solution_${{ needs.extract-num.outputs.num }}.py
+    - name: Write pass solutin at comment
+      uses: wow-actions/auto-comment@v1
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+        pullRequestOpened: |
+           ```python
+           ${{steps.package.outputs.content}}
+           ```
+    
+        pullRequestSynchronize: |
+          ```python
+          ${{steps.package.outputs.content}}
+          ```
+
+
 
   review-pass:
     runs-on: ubuntu-latest
@@ -209,7 +240,7 @@ jobs:
     if: success()
     steps:
     - name: Remove Fail Label if exists
-      uses: actions/github-script@v7
+      uses: actions/github-script@v5
       with:
         script: |
           const issue = await github.rest.issues.get({
@@ -238,7 +269,7 @@ jobs:
             });
           }
     - name: Add Fail Label
-      uses: actions/github-script@v7
+      uses: actions/github-script@v5
       with:
         script: |
           // pass 라벨 추가
@@ -271,3 +302,30 @@ jobs:
             도움이 필요한 사람들이 있으면 도와주세요! 소통하면서 더 성장 할 수 있는 좋은 기회입니다!
             [문제 ${{needs.extract-num.outputs.num}} - 도움주러 가기](${{github.server_url}}/${{github.repository}}/pulls?q=is%3Apr+label%3A"도움이+필요해요%21"+label%3A문제${{needs.extract-num.outputs.num}})
     
+    # 문제 읽어서 comment
+    - name: Checkout repository
+      uses: actions/checkout@v4
+    - name: Read solution path
+      id: path
+      run: |
+        cd ./script
+        echo "path=$(python read_json.py ./json/path.json ${{ needs.extract-num.outputs.num }})" >> $GITHUB_OUTPUT
+    - name: Read package.json
+      id: package
+      uses: juliangruber/read-file-action@v1
+      with:
+        path: ./src/${{github.actor}}/${{steps.path.outputs.path}}/solution_${{ needs.extract-num.outputs.num }}.py
+    - name: Write pass solutin at comment
+      uses: wow-actions/auto-comment@v1
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+        pullRequestOpened: |
+           ```python
+           ${{steps.package.outputs.content}}
+           ```
+    
+        pullRequestSynchronize: |
+          ```python
+          ${{steps.package.outputs.content}}
+          ```
