fix: README Actions

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,8 +1,17 @@
 name: Update README User Status
 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # 매일 0시 정각에 실행
+  workflow_dispatch:
+    inputs:
+      custom_parameter:
+        description: 'Did you disable the protection?'
+        required: true
+        default: 'Umm...I will check it'
+
+
+# on:
+#   schedule:
+#     - cron: '0 0 * * *'  # 매일 0시 정각에 실행
     
 jobs:
   update-pr-list:
