--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,25 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+Scripts/wheel3.exe
+Scripts/wheel3.9.exe
+Scripts/wheel.exe
+Scripts/wheel-3.9.exe
+Scripts/virtualenv.exe
+Scripts/pythonw.exe
+Scripts/python.exe
+Scripts/pytest.exe
+Scripts/pydoc.bat
+Scripts/py.test.exe
+Scripts/pip3.exe
+Scripts/pip3.9.exe
+Scripts/pip.exe
+Scripts/dotenv.exe
+Scripts/deactivate.bat
+Scripts/activate_this.py
+Scripts/activate.ps1
+Scripts/activate.nu
+Scripts/activate.fish
+Scripts/activate.bat
+Scripts/activate
+*.cfg
